load(
    "@build_stack_rules_proto//cpp:cpp_grpc_library.bzl",
    "cpp_grpc_library",
)

# stackb rules_proto doesn't handle proto_source_root and
# I could not find a way to get scalapb to work with workspace
# root relative imports. leaving it hacky like this as this will move
# into cmake.
genrule(
    name = "kvbc_validator.proto_patched",
    srcs = ['kvbc_validator.proto'],
    outs = ["kvbc_validator_patched.proto"],
    cmd = "sed $(SRCS) -e 's,kvbc_data,protos/kvbc_data,' > \"$@\""
)

proto_library(
    name = "kvbc_proto",
    srcs = [
      "kvbc_data.proto", "kvbc_commit.proto",
      "kvbc_events.proto",
      "kvbc_validator_patched.proto"
    ],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
    ],
)

cpp_grpc_library(
    name = "kvbc_cc_proto",
    visibility = [
        "//visibility:public",
    ],
    deps = [":kvbc_proto"],
)

